--- a/detail.html
+++ b/detail.html
@@ -3,34 +3,40 @@
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous">
 </head>
 <body>
-    <div class="container ">
-        <div class="row">
-          <div class="col-lg-6 col-sm-12">
-            <img src="images/beagle.jpg" class="card-img-top" alt="Image of a beagle dog on the grass">
-          </div>
-          <div class="col-lg-6 col-sm-12">
-            <p>Type: Dog</p>
-            <p>Breed: Beagle</p>
-            <p>Sex: Male</p>
-            <p>Color: Tri-color (Black, Brown, White)</p>
-            <p>Spayed / Neutered: Yes</p>
-            <p>Age: 5 Years</p>
-            <p>Animal ID: 34621</p>
-            <p>Microchip Number: 982000364789210</p>
-            <p>Status:</p>
-            <ul><li>Health checked.</li></ul>
-            <ul><li>Vaccinations up to date.</li></ul>
-            <ul><li>Regularly dewormed.</li></ul>
-            <ul><li>Microchipped.</li></ul>
-            <p>A Little Bit About Me:</p>
-            <p>Meet Baxter, a lovable Beagle with a knack for sniffing out fun! Baxter was
-            rescued from a shelter and has blossomed into a friendly and outgoing boy. He
-            loves long walks and has a keen sense of smell. He's great with kids and other
-            dogs, making him the perfect family pet. His favorite pastime is chasing squirrels
-            in the park and curling up for naps. Baxter is looking for a loving home where he
-            can share his endless affection and playful spirit.</p>
-          </div>
+  <h1 style="float: none; position: relative; left: 50%; color: black;">
+    About Me!
+  </h1>
+  <div class="container">
+      <div class="row">
+        <div class="col-lg-6 col-sm-12">
+          <img src="images/beagle.jpg" class="card-img-top" alt="Image of a beagle dog on the grass">
+        </div>
+        <div class="col-lg-6 col-sm-12">
+          <p>Type: Dog</p>
+          <p>Breed: Beagle</p>
+          <p>Sex: Male</p>
+          <p>Color: Tri-color (Black, Brown, White)</p>
+          <p>Spayed / Neutered: Yes</p>
+          <p>Age: 5 Years</p>
+          <p>Animal ID: 34621</p>
+          <p>Microchip Number: 982000364789210</p>
+          <p>Status:</p>
+          <ul><li>Health checked.</li></ul>
+          <ul><li>Vaccinations up to date.</li></ul>
+          <ul><li>Regularly dewormed.</li></ul>
+          <ul><li>Microchipped.</li></ul>
+          <p>A Little Bit About Me:</p>
+          <p>Meet Baxter, a lovable Beagle with a knack for sniffing out fun! Baxter was
+          rescued from a shelter and has blossomed into a friendly and outgoing boy. He
+          loves long walks and has a keen sense of smell. He's great with kids and other
+          dogs, making him the perfect family pet. His favorite pastime is chasing squirrels
+          in the park and curling up for naps. Baxter is looking for a loving home where he
+          can share his endless affection and playful spirit.</p>
         </div>
       </div>
+    </div>
 </body>
+<footer>
+  <p><a href="index.html" style="float: none; position: absolute; left: 50%;" class="link-primary link-offset-2 link-underline-opacity-25 link-underline-opacity-100-hover">Return Home</a></p>
+</footer>
 </html>
