--- a/index.html
+++ b/index.html
@@ -1,12 +1,12 @@
 <html>
 <head>
-<link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous">
-
+	<link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous">
+	<link href="reboot.css">
 </head>
-<h1 style="float: none; position: relative; left: 50%; color: black;">
-    Available Pets
-</h1>
-<body>
+<body style="background-color: lightgray;">
+	<h1 style="float: none; position: relative; text-align: center; color: black;">
+		Available Pets
+	</h1>
 	<div class="container">
 		<div class="row">
 			<div class="col-lg-4 col-sm-12">
