--- a/detail.html
+++ b/detail.html
@@ -2,8 +2,14 @@
 <head>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous">
     <link href="reboot.css">
+    <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Audiowide">
 </head>
 <body style="background-color: lightgray;">
+  <style>
+    body {
+      font-family: "Audiowide", sans-serif;
+    }
+  </style>
   <h1 style="float: none; position: relative; text-align: center; color: black;">
     About Me!
   </h1>
