--- a/index.html
+++ b/index.html
@@ -66,7 +66,7 @@
 					</div>
 				</div>
 			</div>
-		<!--<div class="row">
+			<div class="row">
 				<div class="col-lg-4 col-sm-12">
 					<div class="card" style="width: 18rem;">
 						<img src="images/Siamese.jpg" class="card-img-top" alt="Image of a siamese cat with striking blue eyes">
@@ -119,7 +119,7 @@
 					</div>
 				</div>
 			</div>
-		</div>-->
+		</div>
 	</div>
 </body>
 </html>
