--- a/detail.html
+++ b/detail.html
@@ -3,16 +3,27 @@
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous">
     <link href="reboot.css">
     <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Audiowide">
+    <style>
+      body {
+        font-family: "Audiowide", sans-serif;
+        background-color: lightgray;
+      }
+    </style>
 </head>
-<body style="background-color: lightgray;">
-  <style>
-    body {
-      font-family: "Audiowide", sans-serif;
-    }
-  </style>
+<body>
   <h1 style="float: none; position: relative; text-align: center; color: black;">
     About Me!
   </h1>
+  <script>
+    let index=getQueryParam('index');
+    if(index===null) window.location.href='index.html';
+    else document.getElementById('content').innerHTML=index;
+  
+  function getQueryParam(key){
+    let queryParams=new URLSearchParams(window.location.search);
+    return queryParams.has(key) ? queryParams.get(key) : null;
+  }
+  </script>
   <div class="container">
       <div class="row">
         <div class="col-lg-6 col-sm-12">
