--- a/index.html
+++ b/index.html
@@ -3,16 +3,25 @@
 	<link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous">
 	<link href="reboot.css">
 	<link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Audiowide">
-</head>
-<body style="background-color: lightgray;">
 	<style>
 		body {
 		  font-family: "Audiowide", sans-serif;
+		  background-color: lightgray;
 		}
 	</style>
+</head>
+<body>
 	<h1 style="float: none; position: relative; text-align: center; color: black;">
 		Available Pets
 	</h1>
+	<script src="data.js"></script>
+	<script>
+		const queryString = window.location.search;
+		console.log(queryString);
+		const urlParams = new URLSearchParams(queryString);
+		console.log(urlParams.get('index'))
+		let 
+	</script>
 	<div class="container">
 		<div class="row">
 			<div class="col-lg-4 col-sm-12">
