--- a/index.html
+++ b/index.html
@@ -14,14 +14,6 @@
 	<h1 style="float: none; position: relative; text-align: center; color: black;">
 		Available Pets
 	</h1>
-	<script src="data.js"></script>
-	<script>
-		const queryString = window.location.search;
-		console.log(queryString);
-		const urlParams = new URLSearchParams(queryString);
-		console.log(urlParams.get('index'))
-		let 
-	</script>
 	<div class="container">
 		<div class="row">
 			<div class="col-lg-4 col-sm-12">
@@ -130,5 +122,7 @@
 			</div>
 		</div>
 	</div>
+	<script src="Functions.js">
+	</script>
 </body>
 </html>
