--- a/index.html
+++ b/index.html
@@ -3,6 +3,7 @@
 	<link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous">
 	<link href="reboot.css">
 	<link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Audiowide">
+	<script src="data.js"></script>
 	<style>
 		body {
 		  font-family: "Audiowide", sans-serif;
@@ -16,25 +17,9 @@
 	</h1>
 	<div class="container">
 		<div class="row" id="pet_container">
-			<div class="col-lg-4 col-sm-12">
-				<div class="card" style="width: 18rem;">
-					<img src="images/beagle.jpg" class="card-img-top" alt="Image of a beagle dog on the grass">
-					<div class="card-body">
-						<h5 class="card-title">Baxter</h5>
-						<svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor" class="bi bi-gender-male" viewBox="0 0 16 16">
-							<path fill-rule="evenodd" d="M9.5 2a.5.5 0 0 1 0-1h5a.5.5 0 0 1 .5.5v5a.5.5 0 0 1-1 0V2.707L9.871 6.836a5 5 0 1 1-.707-.707L13.293 2zM6 6a4 4 0 1 0 0 8 4 4 0 0 0 0-8"/>
-						</svg>
-						<svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor" class="bi bi-5-square" viewBox="0 0 16 16">
-							<path d="M7.994 12.158c-1.57 0-2.654-.902-2.719-2.115h1.237c.14.72.832 1.031 1.529 1.031.791 0 1.57-.597 1.57-1.681 0-.967-.732-1.57-1.582-1.57-.767 0-1.242.45-1.435.808H5.445L5.791 4h4.705v1.103H6.875l-.193 2.343h.064c.17-.258.715-.68 1.611-.68 1.383 0 2.561.944 2.561 2.585 0 1.687-1.184 2.806-2.924 2.806Z"/>
-							<path d="M0 2a2 2 0 0 1 2-2h12a2 2 0 0 1 2 2v12a2 2 0 0 1-2 2H2a2 2 0 0 1-2-2zm15 0a1 1 0 0 0-1-1H2a1 1 0 0 0-1 1v12a1 1 0 0 0 1 1h12a1 1 0 0 0 1-1z"/>
-						</svg>
-						<p class="card-text">Baxter, a Beagle dog. He is 5 years old of tri-color (black, brown, white).</p>
-						<a href="detail.html" class="btn btn-primary">Details on Baxter...</a>
-					</div>
-				</div>
-			</div>
 		</div>
 	</div>
 	<script src="Functions.js"></script>
+	pet_card();
 </body>
 </html>
