Details, function edited with details needing adjustments

--- a/detail.html
+++ b/detail.html
@@ -15,17 +15,8 @@
   <h1 style="float: none; position: relative; text-align: center; color: black;">
     About Me!
   </h1>
-  <div class="container">
-      <div class="row">
-        <div class="col-lg-6 col-sm-12">
-          <img src="images/beagle.jpg" class="card-img-top" alt="Image of a beagle dog on the grass">
-        </div>
-        <div class="col-lg-6 col-sm-12">
-          <dl class="row" id="pet_box">
-          </dl>
-        </div>
-      </div>
-    </div>
+  <div id="pet_details_container" class="container">
+  </div>
 </body>
 <footer>
   <p><a href="index.html" style="float: none; position: absolute; left: 50%;" class="link-primary link-offset-2 link-underline-opacity-25 link-underline-opacity-100-hover">Return Home</a></p>
