--- a/detail.html
+++ b/detail.html
@@ -66,7 +66,9 @@
             <dd class="col-sm-9">${pets[id].microchip_num}</dd>
 
             <dt class="col-sm-3">Status:</dt>
-            <dd class="col-sm-9">${pets[id].status}</dd>
+            <dd class="col-sm-9">${pets[id].status[0]}</dd>
+            <dd class="col-sm-9">${pets[id].status[1]}</dd>
+            <dd class="col-sm-9">${pets[id].status[2]}</dd>
 
             <dt class="col-sm-3">A Little Bit About Me:</dt>
             <dd class="col-sm-9">
