so many edits made!!!!

--- a/index.html
+++ b/index.html
@@ -20,5 +20,10 @@
 		</div>
 	</div>
 	<script src="Functions.js"></script>
+	<script>
+	document.addEventListener("DOMContentLoaded", function() {
+    pet_card() });
+	</script>
+	
 </body>
 </html>
