--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
 	<link href="reboot.css">
 	<link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Audiowide">
 	<script src="data.js"></script>
+	<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-C6RzsynM9kWDrMNeT87bh95OGNyZPhcTNXj1NW7RuBCsyN/o0jlpcV8Qyq46cDfL" crossorigin="anonymous"></script>
 	<style>
 		body {
 		  font-family: "Audiowide", sans-serif;
@@ -16,13 +17,35 @@
 		Available Pets
 	</h1>
 	<div class="container">
-		<div class="row" id="pet_container">
+		<div class="row" id="pet_container">	
 		</div>
+		<span id="openModal"></span>
 	</div>
+	<div id="modal" class="modal" tabindex="-1"></div>
 	<script src="Functions.js"></script>
 	<script>
-	document.addEventListener("DOMContentLoaded", function() {
-    pet_card() });
+		document.addEventListener("DOMContentLoaded", function() {
+    	pet_card() });
+
+		document.getElementById('pet_container').addEventListener('click', function (event) {
+            const card = event.target.closest('.card');
+            if (card) {
+                const petIndex = card.parentElement.dataset.index;
+                showModal(petIndex);
+            }
+        });
+
+		document.getElementById('pet_container').addEventListener('click',function(){
+		var myModal = new bootstrap.Modal(document.getElementById('modal'))
+			myModal.show();
+			});
+
+		document.getElementById('closeModal').addEventListener('click',function(){
+			var myModal = new bootstrap.Modal(document.getElementById('modal'))
+				myModal.hide();
+
+		});
+
 	</script>
 	
 </body>
