--- a/index.html
+++ b/index.html
@@ -1,8 +1,8 @@
 <html>
 <head>
-	<link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous">
-	<link href="reboot.css">
-	<link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Audiowide">
+	<link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous"></link>
+	<link href="reboot.css"></link>
+	<link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Audiowide"></link>
 	<script src="data.js"></script>
 	<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-C6RzsynM9kWDrMNeT87bh95OGNyZPhcTNXj1NW7RuBCsyN/o0jlpcV8Qyq46cDfL" crossorigin="anonymous"></script>
 	<style>
@@ -20,7 +20,8 @@
 		<div class="row" id="pet_container">	
 		</div>
 	</div>
-	<div id="modal" class="modal" tabindex="-1"></div>
+	<div id="morepets" class="morepets">
+	</div>
 	<script src="Functions.js"></script>
 	<script>
 		document.addEventListener("DOMContentLoaded", function() {
@@ -35,14 +36,23 @@
 				myModal.show();
             }
         });
-
-		document.getElementById('closeModal').addEventListener('click',function(){
+/*
+		document.getElementById('closeModal').addEventListener('click', function(){
 			var myModal = new bootstrap.Modal(document.getElementById('modal'))
 				myModal.hide();
 
 		});
-
+*/
+		let more_pets = document.createElement('button');
+		more_pets.classList.add('btn');
+		more_pets.classList.add('btn-primary');
+		more_pets.innerText='View more pets!';
+		more_pets.addEventListener('click', function() {
+			console.log('clicked');
+			offset+=9;
+			pet_card();
+		});
+		document.querySelector('#morepets').append(more_pets);
 	</script>
-	
 </body>
 </html>
