updated links in modal function

--- a/index.html
+++ b/index.html
@@ -38,8 +38,8 @@
                 </ul>
             </div>
             <div class="modal-footer">
-                <button class="btn btn-secondary">
-                    <a href="detail.html?id=${pet_index}" style="color: white; text-decoration: none;">
+                <button class="btn btn-secondary" >
+                    <a id="go_to_details_page" style="color: white; text-decoration: none;">
                         More information
                     </a>
                 </button>
