--- a/index.html
+++ b/index.html
@@ -10,6 +10,16 @@
 		  font-family: "Audiowide", sans-serif;
 		  background-color: lightgray;
 		}
+		
+		span.label{
+			font-style: italic;
+			font-weight: bolder;
+			font-size: larger;
+		}
+
+		.modal-body{
+			background-color: gray;
+		}
 	</style>
 </head>
 <body>
@@ -31,7 +41,7 @@
             </div>
             <div class="modal-body" id="modal_body">
                 <ul>
-					<li id="description_pet"></p></p></li>
+					<li id="description_pet"><p></p></li>
                     <li id="pet_sex"><p></p></li>
                     <li id="spayed_or_neutered_pet"><p></p></li>
                     <li id="status_pet"><p></p></li>
