Updated css, readme

--- a/index.html
+++ b/index.html
@@ -20,6 +20,14 @@
 		.modal-body{
 			background-color: gray;
 		}
+
+		.card{
+			height: 95%;
+		}
+
+		.card-img-top{
+			height: auto;
+		}
 	</style>
 </head>
 <body>
