--- a/index.html
+++ b/index.html
@@ -4,7 +4,6 @@
 	<link href="reboot.css"></link>
 	<link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Audiowide"></link>
 	<script src="data.js"></script>
-	<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-C6RzsynM9kWDrMNeT87bh95OGNyZPhcTNXj1NW7RuBCsyN/o0jlpcV8Qyq46cDfL" crossorigin="anonymous"></script>
 	<style>
 		body {
 		  font-family: "Audiowide", sans-serif;
@@ -66,26 +65,61 @@
             </div>
         </div>
 	</div>
+
+
+	<div id="edit-modal" class="modal" tabindex="-1">
+		<div class="modal-dialog" role="document">
+            <div class="modal-content">
+            <div class="modal-header">
+                <h5 class="modal-title" id="pet_name"></h5>
+            </div>
+            <div class="modal-body" id="edit-modal_body">
+				<form>
+					<ul class="list-group" id="edit_pet_list">
+						<li><p>Name: <input type="text" name="name"></input></p></li>
+						<li><p>Type: <select name="type" id="type">
+							<option value="Dog">Dog</option>
+							<option value="Cat">Cat</option>
+							<option value="Other">Other</option></p></select>
+						</li>
+						<li><p>Breed: <input type="text" name="breed"></input></p></li>
+						<li><p>Sex: <select name="sex" id="sex">
+							<option value="Female">Female</option>
+							<option value="Male">Male</option></p></select>
+						</li>
+						<li><p>Color: <input type="text" name="color"></input></p></li>
+						<li><p>Spayed/Neutered: <select name="fixed" id="fixed">
+							<option value="Yes">Yes</option>
+							<option value="No">No</option></p></select>
+						</li>
+						<li><p>Age: <input type="text" name="age"></input></p></li>
+						<li><p>Animal ID: <input type="text" name="animal_id"></input></p></li>
+						<li><p>Microchip Number: <input type="text" name="microchip_number"></input></p></li>
+						<li><p id="status"></p></li>
+						<!--<input type="text" id="status"> -->
+						<li><p>About me: <textarea id="about_me" style="height: 300px; width: 400px;"></textarea></p></li>
+					</ul>
+				</form>
+            </div>
+            <div class="modal-footer">
+                <button class="btn btn-secondary" >
+                    <a id="btn-save-changes" style="color: white; text-decoration: none;">
+                       Save Changes
+                    </a>
+                </button>
+                <button id="closeModal" type="button" class="btn btn-secondary" data-bs-dismiss="modal">Close</button>
+            </div>
+            </div>
+        </div>
+	</div>
+
+
 	<script src="Functions.js"></script>
+	<script src="https://code.jquery.com/jquery-3.7.1.min.js" integrity="sha256-/JqT3SQfawRcv/BIHPThkBvs0OEvtFFmqPF/lYI/Cxo=" crossorigin="anonymous"></script>
+	<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-C6RzsynM9kWDrMNeT87bh95OGNyZPhcTNXj1NW7RuBCsyN/o0jlpcV8Qyq46cDfL" crossorigin="anonymous"></script>
 	<script>
 		document.addEventListener("DOMContentLoaded", function() {
     	pet_card() });
-
-		document.getElementById('pet_container').addEventListener('click', function (event) {
-            const card = event.target.closest('.card');
-            if (card) {
-                const petIndex = card.parentElement.dataset.index;
-                showModal(petIndex);
-				var myModal = new bootstrap.Modal(document.getElementById('modal'))
-				myModal.show();
-            }
-        });
-
-		document.getElementById('closeModal').addEventListener('click', function(){
-			var myModal = new bootstrap.Modal(document.getElementById('modal'))
-				myModal.hide();
-
-		});
 
 		let more_pets = document.createElement('button');
 		more_pets.classList.add('btn');
@@ -97,6 +131,60 @@
 			pet_card();
 		});
 		document.querySelector('#morepets').append(more_pets);
+
+		$(()=>{
+			let editIsOpened = false;
+			let index_num;
+			
+			$(document).on('click','#pet_container .card', function(){
+				if (!editIsOpened){
+					const card = $(this).parent().data('index');	
+					if (card != null | undefined){
+						showModal(card);
+						$('#modal').modal('show');
+					}
+				}
+			});
+
+			$(document).on('click','#closeModal', function(){
+				$('#modal').modal('hide');
+				$('#edit-modal').modal('hide');
+				editIsOpened = false;
+			});
+
+			$(document).on('click', '#pet_container #btn-edit-pet', function(){
+				event.stopPropagation();
+				editIsOpened = true;
+				index_num = $(this).parent().parent().parent().data('index');
+				console.log(pets[index_num].name);
+				$("input[name='name']").val(pets[index_num].name);
+				$("#type").val(pets[index_num].type);
+				$("input[name='breed']").val(pets[index_num].breed);
+				$("#sex").val(pets[index_num].sex);
+				$("input[name='color']").val(pets[index_num].color);
+				$("#fixed").val(pets[index_num].fixed);
+				$("input[name='age']").val(pets[index_num].age);
+				$("input[name='animal_id']").val(pets[index_num].animal_id);
+				$("input[name='microchip_number']").val(pets[index_num].microchip_num);
+				$("#about_me").val(pets[index_num].about_me);
+				$('#edit-modal').modal('show');
+			});
+
+			$(document).on('click','#btn-save-changes', function(){
+				if (index_num !== 'undefined' && index_num !== null){
+					console.log(pets[index_num].name)
+					console.log($("input[name='name']").val())
+					pets[index_num].name = $("input[name='name']").val();
+					console.log(pets[index_num].name)
+					//pets[index_num].sex = $("input[name='fixed']").val();
+
+					$('#edit-modal').modal('hide');
+					editIsOpened = false;
+					console.log($(`.card-container[data-index="${index_num}"] .card`).text());
+					
+				}
+			});
+		});
 	</script>
 </body>
 </html>
