accidently modified function

--- a/index.html
+++ b/index.html
@@ -175,6 +175,12 @@
 					console.log(pets[index_num].name)
 					console.log($("input[name='name']").val())
 					pets[index_num].name = $("input[name='name']").val();
+					pets[index_num].type = $("#type").val();
+					pets[index_num].breed = $("input[name='breed']").val();
+					pets[index_num].sex = $("#sex").val();
+					pets[index_num].color = $("input[name='color']").val();
+					pets[index_num].fixed = $("#fixed").val();
+					pets[index_num].age = $("input[name='age']").val();
 					console.log(pets[index_num].name)
 					//pets[index_num].sex = $("input[name='fixed']").val();
 
