--- a/index.html
+++ b/index.html
@@ -34,6 +34,7 @@
 	</style>
 </head>
 <body>
+	<script src="https://code.jquery.com/jquery-3.7.1.min.js" integrity="sha256-/JqT3SQfawRcv/BIHPThkBvs0OEvtFFmqPF/lYI/Cxo=" crossorigin="anonymous"></script>
 	<h1 style="float: none; position: relative; text-align: center; color: black;">
 		Available Pets
 	</h1>
@@ -159,7 +160,8 @@
 	<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-C6RzsynM9kWDrMNeT87bh95OGNyZPhcTNXj1NW7RuBCsyN/o0jlpcV8Qyq46cDfL" crossorigin="anonymous"></script>
 	<script>
 		document.addEventListener("DOMContentLoaded", function() {
-    	pet_card() });
+    	pet_card()
+		});
 
 		let more_pets = document.createElement('button');
 		more_pets.classList.add('btn');
@@ -274,6 +276,14 @@
 					console.log(pet);
                 });
 		
+		});
+
+		$(document).on('click', '.btn-danger', function() {
+			const index = parseInt($(this).attr('data-index'));
+			console.log(index);
+			pets.splice(index, 1);
+			console.log(pets);
+			$(this).closest('.col-lg-4').remove();
 		});
 	</script>
 </body>
