slight change so modal doesnt pop up on delete

--- a/index.html
+++ b/index.html
@@ -278,7 +278,8 @@
 		
 		});
 
-		$(document).on('click', '.btn-danger', function() {
+		$(document).on('click', '.btn-danger', function(event) {
+			event.stopPropagation();
 			const index = parseInt($(this).attr('data-index'));
 			console.log(index);
 			pets.splice(index, 1);
