--- a/index.html
+++ b/index.html
@@ -158,9 +158,17 @@
 	<script src="Functions.js"></script>
 	<script src="https://code.jquery.com/jquery-3.7.1.min.js" integrity="sha256-/JqT3SQfawRcv/BIHPThkBvs0OEvtFFmqPF/lYI/Cxo=" crossorigin="anonymous"></script>
 	<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-C6RzsynM9kWDrMNeT87bh95OGNyZPhcTNXj1NW7RuBCsyN/o0jlpcV8Qyq46cDfL" crossorigin="anonymous"></script>
+	<script src="https://cdn.jsdelivr.net/npm/axios/dist/axios.min.js"></script>
 	<script>
+		let document_url = "https://jsonblob.com/api/1210465283453345792";
+		var petarray=  '';
 		document.addEventListener("DOMContentLoaded", function() {
-    	pet_card()
+			$.get(document_url, function(data, status){
+			petarray = data;
+			for (let i=offset; i < Math.min(offset+rpp, data.length); i++){
+				pet_card(data[i], i);
+			}
+      		});
 		});
 
 		let more_pets = document.createElement('button');
@@ -168,9 +176,10 @@
 		more_pets.classList.add('btn-primary');
 		more_pets.innerText='View more pets!';
 		more_pets.addEventListener('click', function() {
-			console.log('clicked');
 			offset+=9;
-			pet_card();
+			for (let i=offset; i < Math.min(offset+rpp, petarray.length); i++){
+				pet_card(petarray[i], i);
+			}
 		});
 		document.querySelector('#morepets').append(more_pets);
 
