--- a/index.html
+++ b/index.html
@@ -160,7 +160,7 @@
 	<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-C6RzsynM9kWDrMNeT87bh95OGNyZPhcTNXj1NW7RuBCsyN/o0jlpcV8Qyq46cDfL" crossorigin="anonymous"></script>
 	<script src="https://cdn.jsdelivr.net/npm/axios/dist/axios.min.js"></script>
 	<script>
-		let document_url = "http://jsonblob.com/1211400843529412608";
+		let document_url = "https://jsonblob.com/api/jsonBlob/1211400843529412608";
 		var petarray=  '';
 		document.addEventListener("DOMContentLoaded", function() {
 			$.get(document_url, function(data, status){
