--- a/index.html
+++ b/index.html
@@ -53,10 +53,10 @@
 			<select name="fixed" class="form-control" placeholder="Fixed status of the pet">
 				<option value="Yes">Yes</option>
 				<option value="No">No</option></select>
-			<!-- <input type="text" name="age" class="form-control" placeholder="Age of the pet"/>
-			<input type="text" name="animal_id" class="form-control" placeholder="Animal id of the pet"/>
-			<input type="text" name="microchip_num" class="form-control" placeholder="Microchip number of the pet"/>
-			<input type="checkbox" name="status" value="Health" class="form-check-input" id="status-health">
+			<input type="number" name="age" class="form-control" placeholder="Age of the pet"/>
+			<input type="number" name="animal_id" class="form-control" placeholder="Animal id of the pet"/>
+			<input type="number" name="microchip_num" class="form-control" placeholder="Microchip number of the pet"/>
+			<!-- <input type="checkbox" name="status" value="Health" class="form-check-input" id="status-health">
 			<label class="form-check-label" for="status-health">Health checked</label><br>
 			<input type="checkbox" name="status" value="Vaccinations" class="form-check-input" id="status-vaccinations">
 			<label class="form-check-label" for="status-vaccinations">Vaccinations up to date</label><br>
