json blob edit works now

--- a/index.html
+++ b/index.html
@@ -305,8 +305,8 @@
 
 					$.ajax({
 					type: "PUT",
-					url: "https://jsonblob.com/api/jsonBlob/1077296012858769408",
-					data: JSON.stringify({}),
+					url: document_url,
+					data: JSON.stringify(petarray),
 					contentType: "application/json; charset=utf-8",
 					dataType: "json",
 					success: function(xhr,data,response){
