--- a/index.html
+++ b/index.html
@@ -297,7 +297,7 @@
                     about_me:$('[name=about_me]').val()
                     };
 					
-                    pets.push(pet);
+                    petarray.push(pet);
 					// pet_card(pet);
 					pet_card(pet, petarray.length);
 					console.log(petarray);
